fix image overflow issues on archive page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 
 .container {
